Fix spacing and increase close button hitbox

--- a/src/components/ids-notification-banner/ids-notification-banner.scss
+++ b/src/components/ids-notification-banner/ids-notification-banner.scss
@@ -2,14 +2,15 @@
 
 .ids-notification-banner {
   @include flex();
-  @include p-8();
+  @include pl-8();
 
   align-items: center;
+  height: 44px;
 }
 
 ids-alert {
   @include flex();
-  @include mx-8();
+  @include mr-8();
 }
 
 ids-text::part(text) {
@@ -28,7 +29,13 @@ ids-hyperlink::part(link) {
 }
 
 .ids-notification-banner-button {
+  height: 100%;
   margin-inline-start: auto;
+
+  ids-button {
+    height: 100%;
+    width: 44px;
+  }
 }
 
 .ids-notification-banner-message {
